# EMU

./: CMakeLists.txt  run_all.sh
app/: main.cpp
inc/: Bus.h  common.h  cpu6052.h  cpu6502.h  mem6052.h
src/: Bus.cpp  cpu6052.cpp  cpu6502.cpp  mem6052.cpp
